# remote-apis

./: MODULE.bazel  go.mod  go.sum
internal/: cc_grpc_library.bzl  non_module_deps.bzl
