module(name = "bazel_remote_apis", version = "0.0.0")

bazel_dep(name = "apple_support", version = "1.9.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "gazelle", version = "0.31.0")
bazel_dep(name = "grpc", version = "1.48.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_apple", version = "3.0.0-rc1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_go", version = "0.39.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "upb", version = "0.0.0-20220923-a547704")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_google_genproto",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

rules_go_non_module_deps = use_extension("@io_bazel_rules_go//go/private:extensions.bzl", "non_module_dependencies")
use_repo(
    rules_go_non_module_deps,
    "go_googleapis",
)

non_module_deps = use_extension("//internal:non_module_deps.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "googleapis",
)
